--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -16,10 +16,10 @@ service:
   targetPort: 80
 
 namespace:
-  name: demo-app
+  name: demo-5
   
 labels:
   app:
     name: bb-app
-    version: 7.x.x
+    version: 7.5.0
     env: uat
